--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout :: head">
-</head>
+<head th:replace="layout :: head"></head>
 <body>
 	<nav th:replace="layout :: header"></nav>
+
 	<div class="container main-content form">
 		<div class="row">
 			<form action="#" th:action="@{/contact/save}" th:object="${contact}"
@@ -28,6 +28,7 @@
 		</div>
 	</div>
 	<!-- /.container -->
+
 	<footer th:replace="layout :: footer"></footer>
 </body>
 </html>
