--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
 <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 <title>Spring MyContact</title>
 
 <link href="../static/images/logo.png" th:href="@{/images/logo.png}" rel="shortcut icon"/>
@@ -18,7 +18,7 @@
   <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />	
 </head>
 <body>
-	<nav th:fragment="header" class="navbar navbar-inverse navbar-fixed-top">
+	<nav th:fragment="header" class="navbar navbar-inverse navbar-fixed">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
